resources/assets/sass/design.scss
/* ... */
@media screen and (max-width: 470px) {
    .navbar-brand {
        height: auto;
        width: 45px;
    }   
    .navbar-default .navbar-nav > li > a {
        padding: 4px;
        font-size: 12px;
    }
    .nav.navbar-nav > li .svg-icon {
        width: 17px;
        height: 17px;
    } 
    #car_inspection .nav-tabs > li{
        width: 50%;
    }
    #car_inspection .nav-tabs > li:nth-child(5n){
        width: 100%;
    }
    .availablity_price, .availabe_item_price {
        width: 109px;
    }
    .search_filter {
        left: 60px;
    }
    .search_filter .primary_btn {
        width: 55px;
        height: 55px;
    }
    .search_filter {
        width: 47px;
    }
}
@media screen and (max-width: 385px) {
    .search_filter {
        left: 47px;
    }
}
@media screen and (max-width: 360px) {

    .navbar-default .navbar-nav > li > a {
        font-size: 11px;
        padding: 3px 5px;
    }
    .search_filter {
        position: absolute;
        top: 0;
        width: 100%;
        z-index: 100;
    }
    .search_filter .primary_btn {
        background: #ffffff none repeat scroll 0 0;
        float: right;
        height: 50px;
        line-height: 73px;
        margin: 0 auto;
        width: 50px;
    }
    .filter_hied_btn{
        top: 50px;
    }
    .booking_tab ul li{
        width: 50%;
        margin-bottom: 2px;
    }
    .booking_tab_content .btn-close {
        margin: 20px auto 0 20px;
    }
    .booking_tab_content .active {
        padding-top: 5px;
    }
}
.liting-image{
   float: left;
   width: 100%;
   background-size: cover !important;
   background-position-x: center !important;
   height: 180px;
}
.priusactive{
    padding: 0 0 0 5px;
    margin: 0;
    min-height: 103px;
    display: block;
    width: 100%;
}
.priusactive li {
    display: block;
    list-style: none;
}
.priusactive li p {
    margin: 0 !important;
    display: inline-block;
    padding: 0 5px !important;
    font-size: 12px;
    line-height: 19px;
    font-weight: normal;
}
.priusactive li p:first-child {
    border-right: 1px solid #000;
}
.clickable {
    cursor: pointer;
}
.date-of-birth-form .bootstrap-datetimepicker-widget table td span {
    line-height: 22px !important;
    width: auto !important;
    height: auto !important;
    padding: 5px 10px !important;
}
.menu-component-container {
    background: rgba(0, 0, 0, 0.78);
}
.terms_conditions_scroll{
    float: right;
    width: 100%;
    background: #525252;
    padding: 10px;
    position: relative;
    overflow-y: scroll;
    max-height: 360px;
}
.noty_danger{
    border-left: 5px solid #db202f;
}
.noty_warning{
    border-left: 5px solid #f5a623;
}
.noty_info{
    border-left: 5px solid #3108b6;
}
.noty_danger h3{
    color: #db202f;
}
.noty_warning h3{
    color: #f5a623;
}
.noty_info h3{
    color: #3108b6;
}
.detail_img{
    height: 220px;
    overflow: hidden;
}
.detail_img img{
    width: 100%;
}
.ratting a{
    width: 1.28571429em;
    text-align: center;
    color: #98b927;
    text-decoration: none;
}
.basic_info .bootstrap-datetimepicker-widget table td span {
    line-height: 22px !important;
    width: auto !important;
    height: auto !important;
    padding: 5px 10px !important;
}
.btn-success {
    color: #fff;
    background-color: #87af1e;
    border-color: #87af1e;
}
.btn-success:hover {
    color: #fff;
    background-color: #3c3c3b;
    border-color: #3c3c3b;
}

